package com.example.transactionaloutboxpattern.user.domain

enum class UserStatus {
    ACTIVE,
    INACTIVE
}
